--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "expect": "^24.8.0",
     "file-loader": "^1.1.4",
     "jest": "^24.8.0",
+    "js-yaml": ">=3.13.1",
     "vue-jest": "^3.0.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "jest": {
     "moduleFileExtensions": [
